# python-database-sanitizer

./: .editorconfig  .gitignore  .travis.yml  LICENSE  README.md  requirements-test.txt  setup.cfg  setup.py
.github/workflows/: python-app.yml
database_sanitizer/: __main__.py  config.py  session.py
database_sanitizer/dump/: __init__.py  mysql.py  postgres.py
database_sanitizer/sanitizers/: constant.py  derived.py  email.py  string.py  times.py  user.py
database_sanitizer/tests/: test_config.py  test_dump.py  test_dump_mysql.py  test_dump_postgres.py  test_main.py  test_sanitizers_constant.py  test_sanitizers_derived.py  test_sanitizers_email.py  test_sanitizers_string.py  test_sanitizers_times.py  test_sanitizers_user.py  test_session.py  test_utils_mysql.py  test_utils_postgres.py
database_sanitizer/utils/: mysql.py  postgres.py
