[metadata]
name = database-sanitizer
version = 0.1.0
description = Sanitizes contents of a database.
url = https://github.com/andersinno/python-database-sanitizer

[options]
include_package_data = true
install_requires =
    PyYAML>=3.12
    mock>=2.0.0 ; python_version < '3'
    six>=1.11.0

[options.entry_points]
console_scripts =
    database-sanitizer = database_sanitizer.__main__:main

[bdist_wheel]
universal = 1
