[metadata]
name = database-sanitizer
version = 0.2.0
description = Sanitizes contents of a database.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/andersinno/python-database-sanitizer
license = MIT
license_file = LICENSE

[options]
zip_safe = true
include_package_data = true
packages = find:
install_requires =
    PyYAML>=3.12
    mock>=2.0.0 ; python_version < '3'
    six>=1.11.0

[options.extras_require]
MySQL = PyMySQL

[options.packages.find]
exclude =
    database_sanitizer.tests

[options.entry_points]
console_scripts =
    database-sanitizer = database_sanitizer.__main__:main

[bdist_wheel]
universal = 1
