[metadata]
name = database-sanitizer
version = 1.1.0
description = Sanitizes contents of a database.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/andersinno/python-database-sanitizer
license = MIT
license_file = LICENSE

[options]
zip_safe = true
include_package_data = true
packages = find:
install_requires =
    PyYAML>=3.12
    six>=1.11.0

[options.extras_require]
MySQL = PyMySQL

[options.packages.find]
exclude =
    database_sanitizer.tests

[options.entry_points]
console_scripts =
    database-sanitizer = database_sanitizer.__main__:main

[bdist_wheel]
universal = 1

[isort]
multi_line_output = 3
include_trailing_comma = yes
skip = .tox,dist,venv
not_skip = __init__.py
known_first_party = database_sanitizer
default_section = THIRDPARTY

[coverage:run]
branch = yes

[coverage:report]
precision = 2
omit = */tests/*
exclude_lines =
    ^ *main()
    ^ *from typing import
